apps/wiki/wiki-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-wiki
  namespace: wiki
spec:
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      containers:
        - name: wiki
          image: ghcr.io/requarks/wiki:2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: svc-wiki
  namespace: wiki
spec:
  selector:
    app: wiki
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
