apps/wiki/wiki-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wiki
  namespace: wiki
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: 	sg-06b4e948391b839f2
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:148088962203:certificate/62b03e7f-abbc-414b-bff5-7cc99c3f8660
    alb.ingress.kubernetes.io/subnets: subnet-07a897d8b8de6fdf6,subnet-051fccc630f6a7598
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: > # redirect to https
      {"type": "redirect", "redirectConfig": { "protocol": "HTTPS", "port": "443", "statusCode": "HTTP_301"}}
  #  alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:148088962203:regional/webacl/wigi-waf/e9eecbd4-2512-4dfa-8a38-015743507551
                                            
spec:
  ingressClassName: alb
  rules:
    - host: wiki.spider-shlomo.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation

          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-wiki
                port:
                  number: 3000
